unpackaged/main/default/objects/Account/fields/aaa__c.field-meta.xml
<CustomField>
    <fullName>aaa__c</fullName>
    <label>aaa</label>
    <length>1</length>
    <type>Text</type>
</CustomField>