unpackaged/main/default/objects/Account/fields/aaaa__c.field-meta.xml
<CustomField>
    <fullName>aaaa__c</fullName>
    <label>aaaa</label>
    <length>1</length>
    <type>Text</type>
</CustomField>