unpackaged/main/default/objects/Account/fields/aaaaa__c.field-meta.xml
<CustomField>
    <fullName>aaaaa__c</fullName>
    <label>aaaaa</label>
    <length>1</length>
    <type>Text</type>
</CustomField>