unpackaged/main/default/objects/Account/fields/aaaaaa__c.field-meta.xml
<CustomField>
    <fullName>aaaaaa__c</fullName>
    <label>aaaaaa</label>
    <length>1</length>
    <type>Text</type>
</CustomField>