unpackaged/main/default/objects/Account/fields/b__c.field-meta.xml
<CustomField>
    <fullName>b__c</fullName>
    <label>b</label>
    <length>1</length>
    <type>Text</type>
</CustomField>