unpackaged/main/default/objects/Account/fields/bb__c.field-meta.xml
<CustomField>
    <fullName>bb__c</fullName>
    <label>bb</label>
    <length>1</length>
    <type>Text</type>
</CustomField>