unpackaged/main/default/objects/Account/fields/bbb__c.field-meta.xml
<CustomField>
    <fullName>bbb__c</fullName>
    <label>bbb</label>
    <length>1</length>
    <type>Text</type>
</CustomField>