unpackaged/main/default/objects/Account/fields/bbbb__c.field-meta.xml
<CustomField>
    <fullName>bbbb__c</fullName>
    <label>bbbb</label>
    <length>1</length>
    <type>Text</type>
</CustomField>