unpackaged/main/default/objects/Account/fields/ccc__c.field-meta.xml
<CustomField>
    <fullName>ccc__c</fullName>
    <label>ccc</label>
    <length>1</length>
    <type>Text</type>
</CustomField>