unpackaged/main/default/objects/Account/fields/cccc__c.field-meta.xml
<CustomField>
    <fullName>cccc__c</fullName>
    <label>cccc</label>
    <length>1</length>
    <type>Text</type>
</CustomField>