unpackaged/main/default/objects/Account/fields/ccccc__c.field-meta.xml
<CustomField>
    <fullName>ccccc__c</fullName>
    <label>ccccc</label>
    <length>1</length>
    <type>Text</type>
</CustomField>