unpackaged/main/default/objects/Account/fields/cccccc__c.field-meta.xml
<CustomField>
    <fullName>cccccc__c</fullName>
    <label>cccccc</label>
    <length>1</length>
    <type>Text</type>
</CustomField>