unpackaged/main/default/objects/Account/fields/ccccccc__c.field-meta.xml
<CustomField>
    <fullName>ccccccc__c</fullName>
    <label>ccccccc</label>
    <length>1</length>
    <type>Text</type>
</CustomField>