unpackaged/main/default/objects/Account/fields/ddd__c.field-meta.xml
<CustomField>
    <fullName>ddd__c</fullName>
    <label>ddd</label>
    <length>1</length>
    <type>Text</type>
</CustomField>