unpackaged/main/default/objects/Account/fields/eee__c.field-meta.xml
<CustomField>
    <fullName>eee__c</fullName>
    <label>eee</label>
    <length>1</length>
    <type>Text</type>
</CustomField>