unpackaged/main/default/objects/Account/fields/eeee__c.field-meta.xml
<CustomField>
    <fullName>eeee__c</fullName>
    <label>eeee</label>
    <length>1</length>
    <type>Text</type>
</CustomField>