unpackaged/main/default/objects/Account/fields/fff__c.field-meta.xml
<CustomField>
    <fullName>fff__c</fullName>
    <label>fff</label>
    <length>1</length>
    <type>Text</type>
</CustomField>