unpackaged/main/default/objects/Account/fields/ffff__c.field-meta.xml
<CustomField>
    <fullName>ffff__c</fullName>
    <label>ffff</label>
    <length>1</length>
    <type>Text</type>
</CustomField>