unpackaged/main/default/objects/Account/fields/ggg__c.field-meta.xml
<CustomField>
    <fullName>ggg__c</fullName>
    <label>ggg</label>
    <length>1</length>
    <type>Text</type>
</CustomField>