unpackaged/main/default/objects/Account/fields/gggg__c.field-meta.xml
<CustomField>
    <fullName>gggg__c</fullName>
    <label>gggg</label>
    <length>1</length>
    <type>Text</type>
</CustomField>