unpackaged/main/default/objects/Account/fields/hhh__c.field-meta.xml
<CustomField>
    <fullName>hhh__c</fullName>
    <label>hhh</label>
    <length>1</length>
    <type>Text</type>
</CustomField>