unpackaged/main/default/objects/Account/fields/hhhh__c.field-meta.xml
<CustomField>
    <fullName>hhhh__c</fullName>
    <label>hhhh</label>
    <length>1</length>
    <type>Text</type>
</CustomField>