unpackaged/main/default/objects/Account/fields/iii__c.field-meta.xml
<CustomField>
    <fullName>iii__c</fullName>
    <label>iii</label>
    <length>1</length>
    <type>Text</type>
</CustomField>