unpackaged/main/default/objects/Account/fields/iiii__c.field-meta.xml
<CustomField>
    <fullName>iiii__c</fullName>
    <label>iiii</label>
    <length>1</length>
    <type>Text</type>
</CustomField>