unpackaged/main/default/objects/Account/fields/jjj__c.field-meta.xml
<CustomField>
    <fullName>jjj__c</fullName>
    <label>jjj</label>
    <length>1</length>
    <type>Text</type>
</CustomField>