unpackaged/main/default/objects/Account/fields/jjjj__c.field-meta.xml
<CustomField>
    <fullName>jjjj__c</fullName>
    <label>jjjj</label>
    <length>1</length>
    <type>Text</type>
</CustomField>