unpackaged/main/default/objects/Account/fields/kkk__c.field-meta.xml
<CustomField>
    <fullName>kkk__c</fullName>
    <label>kkk</label>
    <length>1</length>
    <type>Text</type>
</CustomField>