unpackaged/main/default/objects/Account/fields/mmm__c.field-meta.xml
<CustomField>
    <fullName>mmm__c</fullName>
    <label>mmm</label>
    <length>1</length>
    <type>Text</type>
</CustomField>