unpackaged/main/default/objects/Account/fields/ppp__c.field-meta.xml
<CustomField>
    <fullName>ppp__c</fullName>
    <label>ppp</label>
    <length>1</length>
    <type>Text</type>
</CustomField>