unpackaged/main/default/objects/Account/fields/qqq__c.field-meta.xml
<CustomField>
    <fullName>qqq__c</fullName>
    <label>qqq</label>
    <length>1</length>
    <type>Text</type>
</CustomField>