unpackaged/main/default/objects/Account/fields/rrr__c.field-meta.xml
<CustomField>
    <fullName>rrr__c</fullName>
    <label>rrr</label>
    <length>1</length>
    <type>Text</type>
</CustomField>