unpackaged/main/default/objects/Account/fields/sss__c.field-meta.xml
<CustomField>
    <fullName>sss__c</fullName>
    <label>sss</label>
    <length>1</length>
    <type>Text</type>
</CustomField>