unpackaged/main/default/objects/Account/fields/test1__c.field-meta.xml
<CustomField>
    <fullName>test1__c</fullName>
    <label>test1</label>
    <length>1</length>
    <type>Text</type>
</CustomField>