unpackaged/main/default/objects/Account/fields/ttt__c.field-meta.xml
<CustomField>
    <fullName>ttt__c</fullName>
    <label>ttt</label>
    <length>1</length>
    <type>Text</type>
</CustomField>