unpackaged/main/default/objects/Account/fields/www__c.field-meta.xml
<CustomField>
    <fullName>www__c</fullName>
    <label>www</label>
    <length>1</length>
    <type>Text</type>
</CustomField>