unpackaged/main/default/objects/Account/fields/xxx__c.field-meta.xml
<CustomField>
    <fullName>xxx__c</fullName>
    <label>xxx</label>
    <length>1</length>
    <type>Text</type>
</CustomField>