unpackaged/main/default/objects/Account/fields/yyy__c.field-meta.xml
<CustomField>
    <fullName>yyy__c</fullName>
    <label>yyy</label>
    <length>1</length>
    <type>Text</type>
</CustomField>