unpackaged/main/default/objects/Account/fields/zzz__c.field-meta.xml
<CustomField>
    <fullName>zzz__c</fullName>
    <label>zzz</label>
    <length>1</length>
    <type>Text</type>
</CustomField>